fixed spacing issues and some bugs

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -11,7 +11,8 @@
 }
 
 @media screen and (max-width: 560px) {
-  .cover__title {
+  .cover__subtitle {
+    max-width: 288px;
     font-size: 14px;
     line-height: 16px;
   }
