--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 560px) {
   .cover__title {
+    max-width: 288px;
     font-size: 32px;
     line-height: 35px;
   }
