--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,3 +3,8 @@
   padding: 0;
 }
 
+@media screen and (max-width: 720px) {
+  .footer__links {
+    margin: 0; /* убирает отступ снизу в вертикальной организации */
+  }
+}
