--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,8 +8,15 @@
   max-width: 720px;
 }
 
+@media screen and (max-width: 1024px) {
+  .lead__title {
+    margin: 48px auto 32px;
+  }
+}
+
 @media screen and (max-width: 720px) {
   .lead__title {
+    margin: 48px auto 16px;
     font-size: 40px;
     line-height: 44px;
   }
